// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`response encoding void response emits 204 with empty body 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const ItemsInput = {
  remove: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
};

const ItemsOutput = {
  remove: ResponseEncoders.empty(204),
};

export const ItemsOperations = {
  remove: {
    endpoint: {
      service: { name: "VoidApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "remove",
        operationId: "Items.remove",
        method: "DELETE" as const,
        path: "/items/{itemId}",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "items" }],
            [{ kind: "parameter", name: "itemId" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.remove, request, pathParams),
    encodeResult: () => ItemsOutput.remove.encode(undefined),
  } satisfies ServerOperation<{ itemId: string }, void>,
} as const;
"
`;

exports[`response encoding void response emits 204 with empty body 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly remove: OperationHandler<{ itemId: string }, void, Ctx>;
}

export interface VoidApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type { Tag } from "./models.js";

export interface TagsServer<Ctx = MatchedRequestContext> {
  readonly list: OperationHandler<Record<string, never>, Tag[], Ctx>;
  readonly create: OperationHandler<Tag, Tag, Ctx>;
}

export interface ArrayApiServer<Ctx = MatchedRequestContext> {
  readonly Tags: TagsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Tag {
  name: string;
  count: number;
}
"
`;

exports[`response encoding enum and union types in models 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Pet {
  id: string;
  name: string;
  kind: "dog" | "cat" | "bird";
  tag?: string;
}

export interface NotFoundError {
  statusCode: 404;
  code: "NOT_FOUND";
  message: string;
}

export type PetKind = "dog" | "cat" | "bird";
"
`;

exports[`response encoding response @header properties become HTTP headers 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation, JsonSerializer } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  JsonSerializers,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { RateLimitedResponse } from "./models.js";

type _TypespexPayload_RateLimitedResponse_response_1_payload = { data: string };

const _jsonSerializer_RateLimitedResponse_response_1_payload: JsonSerializer<_TypespexPayload_RateLimitedResponse_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_RateLimitedResponse_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_RateLimitedResponse_response_1_payload>([
      { property: "data", wireName: "data", serializer: JsonSerializers.identity<string>() },
    ]),
  );

const DataOutput = {
  fetch: ResponseEncoders.variant<{ data: string; rateLimit: number; requestId: string }>({
    status: 200,
    contentType: "application/json",
    headers: [
      ["rateLimit", "x-rate-limit"],
      ["requestId", "x-request-id"],
    ],
    omit: ["rateLimit", "requestId"],
    transformBody: (body) =>
      _jsonSerializer_RateLimitedResponse_response_1_payload.serialize(
        body as _TypespexPayload_RateLimitedResponse_response_1_payload,
        "$response",
      ),
  }),
};

export const DataOperations = {
  fetch: {
    endpoint: {
      service: { name: "HeadersApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "fetch",
        operationId: "Data.fetch",
        method: "GET" as const,
        path: "/data",
        routePattern: { segments: [[{ kind: "literal", value: "data" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: { data: string; rateLimit: number; requestId: string }) =>
      DataOutput.fetch.encode(result),
  } satisfies ServerOperation<
    Record<string, never>,
    { data: string; rateLimit: number; requestId: string }
  >,
} as const;
"
`;

exports[`response encoding response @header properties become HTTP headers 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface RateLimitedResponse {
  rateLimit: number;
  requestId: string;
  data: string;
}
"
`;

exports[`response encoding text and binary content types use correct encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const TextOutput = {
  plain: ResponseEncoders.variant<{ body: string }>({
    status: 200,
    kind: "text",
    contentType: "text/plain",
    body: "body",
    omit: ["contentType", "body"],
  }),
};

export const TextOperations = {
  plain: {
    endpoint: {
      service: { name: "ContentApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "plain",
        operationId: "Text.plain",
        method: "GET" as const,
        path: "/text",
        routePattern: { segments: [[{ kind: "literal", value: "text" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: { body: string }) => TextOutput.plain.encode(result),
  } satisfies ServerOperation<Record<string, never>, { body: string }>,
} as const;

const BinaryOutput = {
  download: ResponseEncoders.variant<{ body: Uint8Array }>({
    status: 200,
    kind: "bytes",
    contentType: "application/octet-stream",
    body: "body",
    omit: ["contentType", "body"],
  }),
};

export const BinaryOperations = {
  download: {
    endpoint: {
      service: { name: "ContentApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "download",
        operationId: "Binary.download",
        method: "GET" as const,
        path: "/binary",
        routePattern: { segments: [[{ kind: "literal", value: "binary" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: { body: Uint8Array }) => BinaryOutput.download.encode(result),
  } satisfies ServerOperation<Record<string, never>, { body: Uint8Array }>,
} as const;
"
`;

exports[`response encoding multiple error types generate matchVariant result encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation, JsonSerializer } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  JsonSerializers,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { ConflictError, ForbiddenError, Item, NotFoundError } from "./models.js";

type _TypespexPayload_ConflictError_response_1_payload = { conflictId: string; message: string };
type _TypespexPayload_ForbiddenError_response_1_payload = { code: "FORBIDDEN"; message: string };
type _TypespexPayload_NotFoundError_response_1_payload = { code: "NOT_FOUND"; message: string };

const _jsonSerializer_ConflictError_response_1_payload: JsonSerializer<_TypespexPayload_ConflictError_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_ConflictError_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_ConflictError_response_1_payload>([
      {
        property: "conflictId",
        wireName: "conflictId",
        serializer: JsonSerializers.identity<string>(),
      },
      { property: "message", wireName: "message", serializer: JsonSerializers.identity<string>() },
    ]),
  );
const _jsonSerializer_ForbiddenError_response_1_payload: JsonSerializer<_TypespexPayload_ForbiddenError_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_ForbiddenError_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_ForbiddenError_response_1_payload>([
      { property: "code", wireName: "code", serializer: JsonSerializers.identity<"FORBIDDEN">() },
      { property: "message", wireName: "message", serializer: JsonSerializers.identity<string>() },
    ]),
  );
const _jsonSerializer_NotFoundError_response_1_payload: JsonSerializer<_TypespexPayload_NotFoundError_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_NotFoundError_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_NotFoundError_response_1_payload>([
      { property: "code", wireName: "code", serializer: JsonSerializers.identity<"NOT_FOUND">() },
      { property: "message", wireName: "message", serializer: JsonSerializers.identity<string>() },
    ]),
  );

const ItemsInput = {
  read: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  remove: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  updateRequest: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  updateBody: {
    json: Decoders.object<Item>(
      { id: Decoders.string, name: Decoders.string },
      { allowUnknown: true },
    ),
  },
};

const ItemsOutput = {
  read: ResponseEncoders.matchVariant<Item | _TypespexPayload_NotFoundError_response_1_payload>([
    {
      when: (result): result is Item =>
        typeof result === "object" && result !== null && "id" in result && !("code" in result),
      encoder: ResponseEncoders.variant<Item>({ status: 200, contentType: "application/json" }),
    },
    {
      when: (result): result is _TypespexPayload_NotFoundError_response_1_payload =>
        typeof result === "object" && result !== null && "code" in result && !("id" in result),
      encoder: ResponseEncoders.variant<_TypespexPayload_NotFoundError_response_1_payload>({
        status: 404,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_NotFoundError_response_1_payload.serialize(
            body as _TypespexPayload_NotFoundError_response_1_payload,
            "$response",
          ),
      }),
    },
  ]),
  remove: ResponseEncoders.matchVariant<
    | void
    | _TypespexPayload_NotFoundError_response_1_payload
    | _TypespexPayload_ForbiddenError_response_1_payload
  >([
    {
      when: (result): result is void => result === undefined,
      encoder: ResponseEncoders.variant<void>({ status: 204, kind: "empty" }),
    },
    {
      when: (result): result is _TypespexPayload_NotFoundError_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "code" in result &&
        result["code"] === "NOT_FOUND",
      encoder: ResponseEncoders.variant<_TypespexPayload_NotFoundError_response_1_payload>({
        status: 404,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_NotFoundError_response_1_payload.serialize(
            body as _TypespexPayload_NotFoundError_response_1_payload,
            "$response",
          ),
      }),
    },
    {
      when: (result): result is _TypespexPayload_ForbiddenError_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "code" in result &&
        result["code"] === "FORBIDDEN",
      encoder: ResponseEncoders.variant<_TypespexPayload_ForbiddenError_response_1_payload>({
        status: 403,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_ForbiddenError_response_1_payload.serialize(
            body as _TypespexPayload_ForbiddenError_response_1_payload,
            "$response",
          ),
      }),
    },
  ]),
  update: ResponseEncoders.matchVariant<
    | Item
    | _TypespexPayload_NotFoundError_response_1_payload
    | _TypespexPayload_ConflictError_response_1_payload
  >([
    {
      when: (result): result is Item =>
        typeof result === "object" &&
        result !== null &&
        "id" in result &&
        !("code" in result) &&
        !("conflictId" in result),
      encoder: ResponseEncoders.variant<Item>({ status: 200, contentType: "application/json" }),
    },
    {
      when: (result): result is _TypespexPayload_NotFoundError_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "code" in result &&
        !("id" in result) &&
        !("conflictId" in result),
      encoder: ResponseEncoders.variant<_TypespexPayload_NotFoundError_response_1_payload>({
        status: 404,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_NotFoundError_response_1_payload.serialize(
            body as _TypespexPayload_NotFoundError_response_1_payload,
            "$response",
          ),
      }),
    },
    {
      when: (result): result is _TypespexPayload_ConflictError_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "conflictId" in result &&
        !("id" in result) &&
        !("code" in result),
      encoder: ResponseEncoders.variant<_TypespexPayload_ConflictError_response_1_payload>({
        status: 409,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_ConflictError_response_1_payload.serialize(
            body as _TypespexPayload_ConflictError_response_1_payload,
            "$response",
          ),
      }),
    },
  ]),
};

export const ItemsOperations = {
  read: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "read",
        operationId: "Items.read",
        method: "GET" as const,
        path: "/items/{itemId}",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "items" }],
            [{ kind: "parameter", name: "itemId" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.read, request, pathParams),
    encodeResult: (result: Item | _TypespexPayload_NotFoundError_response_1_payload) =>
      ItemsOutput.read.encode(result),
  } satisfies ServerOperation<
    { itemId: string },
    Item | _TypespexPayload_NotFoundError_response_1_payload
  >,

  remove: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "remove",
        operationId: "Items.remove",
        method: "DELETE" as const,
        path: "/items/{itemId}",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "items" }],
            [{ kind: "parameter", name: "itemId" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.remove, request, pathParams),
    encodeResult: (
      result:
        | void
        | _TypespexPayload_NotFoundError_response_1_payload
        | _TypespexPayload_ForbiddenError_response_1_payload,
    ) => ItemsOutput.remove.encode(result),
  } satisfies ServerOperation<
    { itemId: string },
    | void
    | _TypespexPayload_NotFoundError_response_1_payload
    | _TypespexPayload_ForbiddenError_response_1_payload
  >,

  update: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "update",
        operationId: "Items.update",
        method: "PUT" as const,
        path: "/items/{itemId}",
        routePattern: {
          segments: [
            [{ kind: "literal", value: "items" }],
            [{ kind: "parameter", name: "itemId" }],
          ],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request, pathParams) =>
      decodeRequestInputAndBody<{ itemId: string }, Item>(
        ItemsInput.updateRequest,
        ItemsInput.updateBody,
        request,
        pathParams,
        { contentTypes: ["application/json"] },
      ),
    encodeResult: (
      result:
        | Item
        | _TypespexPayload_NotFoundError_response_1_payload
        | _TypespexPayload_ConflictError_response_1_payload,
    ) => ItemsOutput.update.encode(result),
  } satisfies ServerOperation<
    { itemId: string; id: string; name: string },
    | Item
    | _TypespexPayload_NotFoundError_response_1_payload
    | _TypespexPayload_ConflictError_response_1_payload
  >,
} as const;
"
`;

exports[`response encoding multiple error types generate matchVariant result encoders 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Item {
  id: string;
  name: string;
}

export interface NotFoundError {
  _: 404;
  code: "NOT_FOUND";
  message: string;
}

export interface ForbiddenError {
  _: 403;
  code: "FORBIDDEN";
  message: string;
}

export interface ConflictError {
  _: 409;
  conflictId: string;
  message: string;
}
"
`;

exports[`response encoding multiple success types generate matchVariant result encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation, JsonSerializer } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  JsonSerializers,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { AcceptedJob, CreatedItem } from "./models.js";

type _TypespexPayload_AcceptedJob_response_1_payload = { operationId: string };
type _TypespexPayload_CreatedItem_response_1_payload = { id: string };

const _jsonSerializer_AcceptedJob_response_1_payload: JsonSerializer<_TypespexPayload_AcceptedJob_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_AcceptedJob_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_AcceptedJob_response_1_payload>([
      {
        property: "operationId",
        wireName: "operationId",
        serializer: JsonSerializers.identity<string>(),
      },
    ]),
  );
const _jsonSerializer_CreatedItem_response_1_payload: JsonSerializer<_TypespexPayload_CreatedItem_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_CreatedItem_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_CreatedItem_response_1_payload>([
      { property: "id", wireName: "id", serializer: JsonSerializers.identity<string>() },
    ]),
  );

const ItemsOutput = {
  create: ResponseEncoders.matchVariant<
    | _TypespexPayload_CreatedItem_response_1_payload
    | _TypespexPayload_AcceptedJob_response_1_payload
  >([
    {
      when: (result): result is _TypespexPayload_CreatedItem_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "id" in result &&
        !("operationId" in result),
      encoder: ResponseEncoders.variant<_TypespexPayload_CreatedItem_response_1_payload>({
        status: 201,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_CreatedItem_response_1_payload.serialize(
            body as _TypespexPayload_CreatedItem_response_1_payload,
            "$response",
          ),
      }),
    },
    {
      when: (result): result is _TypespexPayload_AcceptedJob_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "operationId" in result &&
        !("id" in result),
      encoder: ResponseEncoders.variant<_TypespexPayload_AcceptedJob_response_1_payload>({
        status: 202,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_AcceptedJob_response_1_payload.serialize(
            body as _TypespexPayload_AcceptedJob_response_1_payload,
            "$response",
          ),
      }),
    },
  ]),
};

export const ItemsOperations = {
  create: {
    endpoint: {
      service: { name: "MultiSuccessApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Items.create",
        method: "POST" as const,
        path: "/items",
        routePattern: { segments: [[{ kind: "literal", value: "items" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (
      result:
        | _TypespexPayload_CreatedItem_response_1_payload
        | _TypespexPayload_AcceptedJob_response_1_payload,
    ) => ItemsOutput.create.encode(result),
  } satisfies ServerOperation<
    Record<string, never>,
    | _TypespexPayload_CreatedItem_response_1_payload
    | _TypespexPayload_AcceptedJob_response_1_payload
  >,
} as const;
"
`;

exports[`response encoding multiple success types generate matchVariant result encoders 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
type _TypespexPayload_AcceptedJob_response_1_payload = { operationId: string };
type _TypespexPayload_CreatedItem_response_1_payload = { id: string };

export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly create: OperationHandler<
    Record<string, never>,
    | _TypespexPayload_CreatedItem_response_1_payload
    | _TypespexPayload_AcceptedJob_response_1_payload,
    Ctx
  >;
}

export interface MultiSuccessApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`response encoding same-status union responses preserve the complete body union 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Circle, Square } from "./models.js";

const ShapesInput = {
  create: {
    json: Decoders.object<Circle>(
      { kind: Decoders.strictLiteral("circle"), radius: Decoders.strictNumber },
      { allowUnknown: true },
    ),
  },
};

const ShapesOutput = {
  create: ResponseEncoders.json<Circle | Square>(200),
};

export const ShapesOperations = {
  create: {
    endpoint: {
      service: { name: "SameStatusApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Shapes.create",
        method: "POST" as const,
        path: "/shapes",
        routePattern: { segments: [[{ kind: "literal", value: "shapes" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeBody<Circle>(request, ShapesInput.create, { contentTypes: ["application/json"] }),
    encodeResult: (result: Circle | Square) => ShapesOutput.create.encode(result),
  } satisfies ServerOperation<Circle, Circle | Square>,
} as const;
"
`;

exports[`response encoding discriminator response unions generate readable type guards 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface CreateResult {
  kind: string;
}

export interface CreatedItem extends CreateResult {
  _: 201;
  kind: "created";
  id: string;
}

export interface AcceptedJob extends CreateResult {
  _: 202;
  kind: "accepted";
  operationId: string;
}
"
`;

exports[`response encoding discriminator response unions generate readable type guards 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation, JsonSerializer } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  JsonSerializers,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { AcceptedJob, CreatedItem } from "./models.js";

type _TypespexPayload_AcceptedJob_response_1_payload = { kind: "accepted"; operationId: string };
type _TypespexPayload_CreatedItem_response_1_payload = { kind: "created"; id: string };

const _jsonSerializer_AcceptedJob_response_1_payload: JsonSerializer<_TypespexPayload_AcceptedJob_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_AcceptedJob_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_AcceptedJob_response_1_payload>([
      { property: "kind", wireName: "kind", serializer: JsonSerializers.identity<"accepted">() },
      {
        property: "operationId",
        wireName: "operationId",
        serializer: JsonSerializers.identity<string>(),
      },
    ]),
  );
const _jsonSerializer_CreatedItem_response_1_payload: JsonSerializer<_TypespexPayload_CreatedItem_response_1_payload> =
  JsonSerializers.lazy<_TypespexPayload_CreatedItem_response_1_payload>(() =>
    JsonSerializers.object<_TypespexPayload_CreatedItem_response_1_payload>([
      { property: "kind", wireName: "kind", serializer: JsonSerializers.identity<"created">() },
      { property: "id", wireName: "id", serializer: JsonSerializers.identity<string>() },
    ]),
  );

const ItemsOutput = {
  create: ResponseEncoders.matchVariant<
    | _TypespexPayload_CreatedItem_response_1_payload
    | _TypespexPayload_AcceptedJob_response_1_payload
  >([
    {
      when: (result): result is _TypespexPayload_CreatedItem_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "kind" in result &&
        result["kind"] === "created",
      encoder: ResponseEncoders.variant<_TypespexPayload_CreatedItem_response_1_payload>({
        status: 201,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_CreatedItem_response_1_payload.serialize(
            body as _TypespexPayload_CreatedItem_response_1_payload,
            "$response",
          ),
      }),
    },
    {
      when: (result): result is _TypespexPayload_AcceptedJob_response_1_payload =>
        typeof result === "object" &&
        result !== null &&
        "kind" in result &&
        result["kind"] === "accepted",
      encoder: ResponseEncoders.variant<_TypespexPayload_AcceptedJob_response_1_payload>({
        status: 202,
        contentType: "application/json",
        omit: ["_"],
        transformBody: (body) =>
          _jsonSerializer_AcceptedJob_response_1_payload.serialize(
            body as _TypespexPayload_AcceptedJob_response_1_payload,
            "$response",
          ),
      }),
    },
  ]),
};

export const ItemsOperations = {
  create: {
    endpoint: {
      service: { name: "DiscriminatorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Items.create",
        method: "POST" as const,
        path: "/items",
        routePattern: { segments: [[{ kind: "literal", value: "items" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (
      result:
        | _TypespexPayload_CreatedItem_response_1_payload
        | _TypespexPayload_AcceptedJob_response_1_payload,
    ) => ItemsOutput.create.encode(result),
  } satisfies ServerOperation<
    Record<string, never>,
    | _TypespexPayload_CreatedItem_response_1_payload
    | _TypespexPayload_AcceptedJob_response_1_payload
  >,
} as const;
"
`;
